# AtomicEngine

./: CMakeLists.txt  main.cpp  unordered_map.h
_lab/: lab.cpp  lab.html  lab.js  lab.txt  test.gltf
core/: AtomicEngine.h  AtomicGLTF.cpp  AtomicGLTF.h  AtomicVK.cpp  AtomicVK.h
shaders/: shader.frag.glsl  shader.vert.glsl
shaders/spirv/: shader.frag.spv  shader.vert.spv
src/: main.cpp
src/core/: AtomicEngine.cpp  AtomicEngine.h  AtomicVK.cpp  AtomicVK.h
src/shaders/: shader.vert.glsl
src/shaders/spirv/: shader.vert.spv
